--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@ body {
     font-size: 130%;
     background-color: white;
     height: 100%;
-    width: 100%;
+    width: 100%;    
     overflow-x: hidden
 }
 
@@ -21,37 +21,28 @@ header {
     top: 0px;
 }
 
-nav {
-    position: relative;
-
+a {
+    text-decoration: none;
 }
 
 nav img {
-    position: absolute;
-    width: 90px;
-    height: 90px;
-    right: 15px;
-    margin-right: 10px;
+    width: 80px;
+    height: 80px;
 }
 
 nav ul {
-    position: relative;
-    left: 13%;
-    top: 30px;
+    display: flex;
+    justify-content: space-evenly;
+    width: 1000px;
+    margin-left: 100px;
 }
 
-nav li {
-    display: inline;
-    list-style-type: none;
-
-}
 
 header nav ul a {
-    text-decoration: none;
     color: #70534E;
     font-weight: bold;
     background-color: #F5F749;
-    border-radius: 5%;
+    border-radius: 2px;
     padding: 5px 8px;
     margin: 0px 8px;
 }
@@ -60,26 +51,31 @@ header nav ul a:hover {
     background-color: #F7F7F2;
 }
 
+.active {
+    background-color: #F7F7F2;
+}
+
 .divmain {
-    position: relative;
-    margin: 0 0 100px 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 main {
-    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     background-color: #997E65;
-    position: absolute;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    left: 18%;
     z-index: 200;
+
 }
 
 h1 {
     color: #F5F749;
     font-size: 55px;
     padding: 5px 55px; 
-    text-align: center;
 }
 
 .fondo {
@@ -132,7 +128,6 @@ footer {
     position: relative;
     align-items: center;
     justify-content: center;
-    margin-top: 80px;
     background-color: #C6B38E;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -213,10 +208,8 @@ footer {
 
 #subtitulov {
     display: flex;
-    position: relative;
     align-items: center;
     justify-content: center;
-    margin-top: 80px;
     background-color: #C6B38E;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -365,6 +358,55 @@ footer {
 
 }
 
+@media (max-width: 768px) {
+    .responsiveUL {
+        margin-top: 2px;
+    }
 
+    nav ul {
+        padding-top: 5px;
+        height: auto;
+        background-color: #F5F749;
+        width: 100%;
+        padding-bottom: 3px;
+    }
 
+    .active {
+        background-color: #F5F749;
+    }
 
+    .inframe {
+        width: 100%;
+    }
+}
+
+@media (max-width: 425px) {
+    .fondo h3 {
+        font-size: 60px;
+    }
+
+    article ul {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 800px;
+    }
+
+    .secv {
+        width: 100%;
+    }
+
+    .divv {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .seca {
+        width: 100%;
+    }
+
+    .diva {
+        display: flex;
+        flex-direction: column;
+    }
+}
