--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -207,6 +207,11 @@ footer {
                 justify-content: center;
                 background-color: #e0e0e0;
                 padding: 20px;
+                img {
+                    max-width: 100%;
+                    max-height: 100%;
+                    object-fit: cover;
+                }
                 .cardv {
                     width: 100%;
                     height: 100%;
@@ -349,18 +354,20 @@ footer {
             }
         }
     }
-    .secv {
-        width: 100%;
-    }
-    .divv {
-        display: flex;
-        flex-direction: column;
-    }
     .seca {
-        width: 100%;
+        .articlea {
+            .diva {
+                display: flex;
+                flex-direction: column;
+            }
+        }
     }
-    .diva {
-        display: flex;
-        flex-direction: column;
+    .secv {
+        .articlev {
+            .divv {
+                display: flex;
+                flex-direction: column;
+            }
+        }
     }
 }
