--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,4 +1,5 @@
-@import "utilidades";
+@import "utilidades"; 
+/*Para importar "_utilidades.scss"*/
 
 * {
     padding: 0;
@@ -64,8 +65,6 @@ main {
     flex-direction: row;
     justify-content: center;
     background-color: #997E65;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
     z-index: 200;
     h1 {
         color: #F5F749;
@@ -75,16 +74,16 @@ main {
 }
 
 .fondoMain {
-    background-image: url(../files/mudanza1.jpg); 
-    position: relative;
-    height: 1000px;
+    background-image: url(../files/inmobiliariaaa.jpg); 
+    height: auto;
     width: 100%;
-    opacity: 0.8;
-    article {
-        h3 {
+    div {
+        margin-bottom: 200px;
+        h2 {
             color: black;
             font-size: 100px;
             margin:50px 50px;
+            letter-spacing: 4px;
         }
         ul {
             display: flex;
@@ -115,15 +114,13 @@ footer {
     }
 }
 
-/*ALQUILER*/
+/*ALQUILER (la "A" al final de la clase indica que es de ALQUILER)*/
 
 .subtituloa {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #C6B38E;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     h2 {
         color: white;
         font-size: 60px;
@@ -132,7 +129,7 @@ footer {
 }
 
 .seca {
-    .articlea {
+    .div-a {
         .diva {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -189,14 +186,14 @@ footer {
     }
 }
 
-/*VENTA*/
+/*VENTA (la "V" al final de la clase indica que es de VENTA)*/
 
 .subtitulov {
     @extend .subtituloa
 }
 
 .secv {
-    .articlev {
+    .div-v {
         .divv {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
@@ -258,18 +255,17 @@ footer {
     }
 }
 
-/*REDES*/
+/*REDES (la "R" al final de la clase indica que es de REDES)*/
 
 .bodyr {
     background-color: #9A9B73;
 }
 
-#subtitulor {
+.subtitulor {
     display: flex;
     position: relative;
     align-items: center;
     justify-content: center;
-    margin-top: 85px;
     background-color: #C6B38E;
     h2 {
         color: white;
@@ -319,43 +315,115 @@ footer {
     }
 }
 
+/*CONTACTANOS (la "C" al final de la clase indica que es de CONTACTANOS)*/
+
+.subtituloc {
+    @extend .subtituloa
+}
+
+section {
+    display: flex;
+    justify-content: center;
+    form {
+        margin-top: 20px;
+        button {
+            margin:5px 60px 20px;
+        }
+        textarea {
+            resize: none;
+        }
+    }
+}
+
 /*RESPONSIVE*/
 
+/* LAPTOP */
+@media (max-width: 1024px) {
+    header {
+        nav {
+            .logo1 {
+            display: none;
+            }
+            ul {
+                margin-left: 0;
+                margin-top: 20px;
+            }
+        }
+    }
+}
+
+/*TABLET*/
 @media (max-width: 768px) {
+    header {
+        nav {
+            .logo1 {
+                display: flex;
+            }
+        }
+    }
     .responsiveUL {
         margin-top: 2px;
+        margin-left: 50%;
         ul {
             padding-top: 5px;
+            padding-bottom: 3px;
             height: auto;
             background-color: #F5F749;
-            width: 100%;
-            padding-bottom: 3px;
+            width: auto;
             .active {
                 background-color: #F5F749;
             }
         }
     }
-    .inframe {
-        width: 100%;
-    }
-}
-
-@media (max-width: 425px) {
     .fondoMain {
-        article {
-            h3 {
-                font-size: 60px;
+    background-position: center;
+        div {
+            h2 {
+                font-size: 70px;
+                margin-left: 5px;
                 }
             ul {
                 display: flex;
                 flex-direction: column;
-                justify-content: space-between;
+                justify-content: stretch;
                 height: 800px;
+                margin: 15px 0 0 15px;
+                li {
+                    font-size: 40px;
+                    margin: 0;
+                }
+            }
+        }
+    }
+}
+
+/*CELULAR*/
+@media (max-width: 425px) {
+    .responsiveUL {
+        margin-left: 30px;
+    }
+    .fondoMain {
+        div {
+            h2 {
+                font-size: 60px;
+                margin-right: 0;
+                margin-left: 10px;
+                margin-bottom: 80px;
+                }
+            ul {
+                display: flex;
+                flex-direction: column;
+                justify-content: stretch;
+                margin: 15px 0 0 15px;
+                li {
+                    font-size: 25px;
+                    margin-bottom: 50px;
+                }
             }
         }
     }
     .seca {
-        .articlea {
+        .div-a {
             .diva {
                 display: flex;
                 flex-direction: column;
@@ -363,11 +431,53 @@ footer {
         }
     }
     .secv {
-        .articlev {
+        .div-v {
             .divv {
                 display: flex;
                 flex-direction: column;
             }
+        }
+    }
+    section {
+        .divr {
+            width: 100%;
+            padding: 0.5px;
+        }
+    }
+}
+
+/* MAX 375 */
+@media (max-width: 375px) {
+    .responsiveUL {
+        ul {
+            font-size: 15px;
+        }
+    }
+    main {
+        h1 {
+            font-size: 40px;
+        }
+    }
+    .fondoMain {
+        div {
+            h2 {
+                font-size: 40px;
+            }
+            ul {
+                li {
+                    font-size: 20px;
+                    }
+            }
+        }
+    }
+    .subtituloa {
+        h2 {
+            font-size: 40px;
+        }
+    }
+    .subtitulov {
+        h2 {
+            font-size: 40px;
         }
     }
 }
